using FamilyVeda.Domain.Common;
using FamilyVeda.Domain.Identity;
using FamilyVeda.Domain.Triage;

namespace FamilyVeda.Domain.Clinical;

public sealed class Doctor : Entity
{
    public Guid UserId { get; set; }
    public UserAccount? User { get; set; }
    public required string RegistrationNumberHash { get; set; }
    public required string RegistrationNumberLastFour { get; set; }
    public VerificationStatus VerificationStatus { get; set; } = VerificationStatus.Pending;
    public string? Specialty { get; set; }
}

public sealed class DoctorVerificationLog : Entity
{
    public Guid DoctorId { get; set; }
    public Doctor? Doctor { get; set; }
    public Guid AdminUserId { get; set; }
    public UserAccount? AdminUser { get; set; }
    public VerificationStatus FromStatus { get; set; }
    public VerificationStatus ToStatus { get; set; }
    public string? Reason { get; set; }
}

public sealed class FamilyDoctorAssignment : Entity
{
    public Guid FamilyId { get; set; }
    public Family? Family { get; set; }
    public Guid DoctorId { get; set; }
    public Doctor? Doctor { get; set; }
    public bool IsPrimary { get; set; }
    public DateTimeOffset? EndedAt { get; set; }
}

public sealed class CaseAccessGrant : Entity
{
    public Guid TriageCaseId { get; set; }
    public TriageCase? TriageCase { get; set; }
    public Guid DoctorId { get; set; }
    public Doctor? Doctor { get; set; }
    public DateTimeOffset ExpiresAt { get; set; }
    public DateTimeOffset? RevokedAt { get; set; }
    public required string Reason { get; set; }
}

public sealed class Approval : Entity
{
    public Guid TriageCaseId { get; set; }
    public TriageCase? TriageCase { get; set; }
    public Guid DoctorId { get; set; }
    public Doctor? Doctor { get; set; }
    public ApprovalAction Action { get; set; }
    public string? DoctorNotes { get; set; }
    public string? FinalAdvisory { get; set; }
    public DateTimeOffset DecidedAt { get; set; }
}

public sealed class AuditLog : Entity
{
    public Guid? ActorUserId { get; set; }
    public UserAccount? ActorUser { get; set; }
    public Guid? SubjectMemberId { get; set; }
    public Member? SubjectMember { get; set; }
    public Guid? ConsentRefId { get; set; }
    public FamilyVeda.Domain.Identity.Consent? ConsentRef { get; set; }
    public required string EventType { get; set; }
    public required string ResourceType { get; set; }
    public Guid? ResourceId { get; set; }
    public required string Outcome { get; set; }
    public string? MetadataJson { get; set; }
    public string? CorrelationId { get; set; }
}
