using FamilyVeda.Domain.Common;

namespace FamilyVeda.Domain.Identity;

public sealed class UserAccount : Entity
{
    public required string Email { get; set; }
    public required string PasswordHash { get; set; }
    public required string DisplayName { get; set; }
    public UserType UserType { get; set; }
    public bool IsActive { get; set; } = true;
    public string? RefreshTokenHash { get; set; }
    public DateTimeOffset? RefreshTokenExpiresAt { get; set; }
    public DateTimeOffset? RefreshTokenRevokedAt { get; set; }
    public string? DeviceToken { get; set; }
    public string? DevicePlatform { get; set; }
}

public sealed class Family : Entity
{
    public required string Name { get; set; }
    public Guid CreatedByUserId { get; set; }
    public UserAccount? CreatedByUser { get; set; }
    public ICollection<Member> Members { get; set; } = [];
}

public sealed class Member : Entity
{
    public Guid FamilyId { get; set; }
    public Family? Family { get; set; }
    public Guid? UserId { get; set; }
    public UserAccount? User { get; set; }
    public required string DisplayName { get; set; }
    public DateOnly DateOfBirth { get; set; }
    public FamilyRole Role { get; set; }
    public ICollection<Consent> Consents { get; set; } = [];
}

public sealed class Relationship : Entity
{
    public Guid MemberId { get; set; }
    public Member? Member { get; set; }
    public Guid RelatedMemberId { get; set; }
    public Member? RelatedMember { get; set; }
    public required string RelationshipType { get; set; }
    public bool IsBiological { get; set; }
}

public sealed class Consent : Entity
{
    public Guid MemberId { get; set; }
    public Member? Member { get; set; }
    public ConsentCategory Category { get; set; }
    public ConsentStatus Status { get; set; } = ConsentStatus.NotSet;
    public Guid? GrantedByUserId { get; set; }
    public UserAccount? GrantedByUser { get; set; }
    public bool GrantedByGuardian { get; set; }
    public DateTimeOffset? GrantedAt { get; set; }
    public DateTimeOffset? RevokedAt { get; set; }
}

public sealed class FamilyInvitation : Entity
{
    public Guid FamilyId { get; set; }
    public Family? Family { get; set; }
    public Guid InvitedByUserId { get; set; }
    public UserAccount? InvitedByUser { get; set; }
    public required string InvitedEmailHash { get; set; }
    public required string TokenHash { get; set; }
    public DateTimeOffset ExpiresAt { get; set; }
    public DateTimeOffset? AcceptedAt { get; set; }
    public Guid? AcceptedByUserId { get; set; }
    public UserAccount? AcceptedByUser { get; set; }
}
