using FamilyVeda.Domain.Common;
using FamilyVeda.Domain.Identity;

namespace FamilyVeda.Domain.Triage;

public sealed class Episode : Entity
{
    public Guid MemberId { get; set; }
    public Member? Member { get; set; }
    public required string SymptomsJson { get; set; }
    public int DurationDays { get; set; }
    public int Severity { get; set; }
    public string? Notes { get; set; }
    public ICollection<TriageCase> TriageCases { get; set; } = [];
}

public sealed class TriageCase : Entity
{
    public Guid EpisodeId { get; set; }
    public Episode? Episode { get; set; }
    public Guid MemberId { get; set; }
    public Member? Member { get; set; }
    public TriageStatus Status { get; set; } = TriageStatus.Submitted;
    public TriagePriority Priority { get; set; } = TriagePriority.Routine;
    public string? ContextOutputJson { get; set; }
    public string? AnalysisOutputJson { get; set; }
    public string? FamilialRiskOutputJson { get; set; }
    public string? DraftAdvisoryJson { get; set; }
    public string? FailureCode { get; set; }
    public DateTimeOffset? SubmittedAt { get; set; }
    public DateTimeOffset? CompletedAt { get; set; }
    public ICollection<AgentTrace> Traces { get; set; } = [];
    public ICollection<FamilyVeda.Domain.Clinical.CaseAccessGrant> AccessGrants { get; set; } = [];
}

public sealed class AgentTrace : Entity
{
    public Guid TriageCaseId { get; set; }
    public TriageCase? TriageCase { get; set; }
    public int StepNumber { get; set; }
    public AgentKind Agent { get; set; }
    public AgentStepStatus Status { get; set; }
    public required string InputHash { get; set; }
    public required string ToolsRequestedJson { get; set; }
    public required string ToolsAllowedJson { get; set; }
    public required string ToolsDeniedJson { get; set; }
    public string? OutputJson { get; set; }
    public bool OutputSchemaValid { get; set; }
    public decimal Confidence { get; set; }
    public long LatencyMilliseconds { get; set; }
    public int? InputTokens { get; set; }
    public int? OutputTokens { get; set; }
    public string? ModelName { get; set; }
    public string? ErrorCode { get; set; }
}

public sealed class NotificationSubscription : Entity
{
    public Guid UserId { get; set; }
    public UserAccount? User { get; set; }
    public required string TokenHash { get; set; }
    public required string ProtectedToken { get; set; }
    public required string Platform { get; set; }
    public bool IsActive { get; set; } = true;
    public DateTimeOffset LastSeenAt { get; set; }
}
